Removed syncing of Data files (some exceeded 100MB limits)

--- a/Test_Notebook_1.ipynb
+++ b/Test_Notebook_1.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9f1ff1ec",
    "metadata": {},
    "outputs": [
@@ -103,6 +103,7 @@
    ],
    "source": [
     "fdir2 = r\"Fibre Data Files\\Stationary Spectra\\FBGs 24.04\"\n",
+    "# test\n",
     "ff.spectral_summation.load_from_enlight_folder(fdir2, wvl_range=DEF_WVL).plot_powers(True)"
    ]
   },
